// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render settings form footer disabled 1`] = `
<footer
  class="DutySettings-Footer"
>
  <a
    class="Button2 Button2_type_link Button2_view_pseudo Button2_size_s DutySettings-Cancel"
  >
    <span
      class="Button2-Text"
    >
      i18n:cancel-label
    </span>
  </a>
  <button
    aria-disabled="true"
    autocomplete="off"
    class="Button2 Button2_type_submit Button2_view_action Button2_size_s DutySettings-Submit"
    disabled=""
    type="submit"
  >
    <span
      class="Button2-Text"
    >
      i18n:create-label
    </span>
  </button>
</footer>
`;

exports[`Should render settings form footer in creation mode 1`] = `
<footer
  class="DutySettings-Footer"
>
  <a
    class="Button2 Button2_type_link Button2_view_pseudo Button2_size_s DutySettings-Cancel"
  >
    <span
      class="Button2-Text"
    >
      i18n:cancel-label
    </span>
  </a>
  <button
    autocomplete="off"
    class="Button2 Button2_type_submit Button2_view_action Button2_size_s DutySettings-Submit"
    type="submit"
  >
    <span
      class="Button2-Text"
    >
      i18n:create-label
    </span>
  </button>
</footer>
`;

exports[`Should render settings form footer in edit mode 1`] = `
<footer
  class="DutySettings-Footer"
>
  <a
    class="Button2 Button2_type_link Button2_view_pseudo Button2_size_s DutySettings-Cancel"
  >
    <span
      class="Button2-Text"
    >
      i18n:cancel-label
    </span>
  </a>
  <button
    autocomplete="off"
    class="Button2 Button2_type_submit Button2_view_action Button2_size_s DutySettings-Submit"
    type="submit"
  >
    <span
      class="Button2-Text"
    >
      i18n:edit-label
    </span>
  </button>
  <button
    autocomplete="off"
    class="Button2 Button2_view_pseudo Button2_size_s DutySettings-Remove"
    type="button"
  >
    <span
      aria-hidden="true"
      class="Icon Icon_size_m Icon_type_trash DutySettings-Remove-Icon Button2-Icon"
    />
    <span
      class="Button2-Text"
    >
      i18n:remove-label
    </span>
  </button>
</footer>
`;

exports[`Should render settings form footer in loading state 1`] = `
<footer
  class="DutySettings-Footer"
>
  <a
    aria-busy="true"
    aria-disabled="true"
    class="Button2 Button2_progress Button2_type_link Button2_view_pseudo Button2_size_s DutySettings-Cancel"
    disabled=""
    tabindex="-1"
  >
    <span
      class="Button2-Text"
    >
      i18n:cancel-label
    </span>
  </a>
  <button
    aria-busy="true"
    aria-disabled="true"
    autocomplete="off"
    class="Button2 Button2_progress Button2_type_submit Button2_view_action Button2_size_s DutySettings-Submit"
    disabled=""
    type="submit"
  >
    <span
      class="Button2-Text"
    >
      i18n:create-label
    </span>
  </button>
</footer>
`;
